--- a/src/css/buy-now.css
+++ b/src/css/buy-now.css
@@ -42,10 +42,7 @@
 
   .buy-now__close-btn {
     position: absolute;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 8px;
     top: 14px;
     right: 14px;
     width: 28px;
