--- a/src/css/explore-our-new-chocolate-first.css
+++ b/src/css/explore-our-new-chocolate-first.css
@@ -38,6 +38,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 8px;
   width: 28px;
   height: 28px;
   border-radius: 50%;
