--- a/src/css/explore-our-new-chocolate-first.css
+++ b/src/css/explore-our-new-chocolate-first.css
@@ -42,7 +42,7 @@
   width: 28px;
   height: 28px;
   border-radius: 50%;
-  fill: var(--pr-text-color);
+  fill: var(--sec-text-color);
   background: none;
   border: none;
   outline: none;
