--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -6,8 +6,8 @@
       data-hero-close
       data-sellers-close
     >
-      <svg class="buy-now__close-btn-icon" width="24" height="24">
-        <use href="./img/sprite.svg#icon-close-buy-now"></use>
+      <svg class="buy-now__close-btn-icon" width="18" height="18">
+        <use href="./img/sprite.svg#icon-vector"></use>
       </svg>
     </button>
 
