--- a/src/css/buy-now.css
+++ b/src/css/buy-now.css
@@ -45,7 +45,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* padding: 12px; */
+    padding: 6px;
     top: 14px;
     right: 14px;
     width: 28px;
