--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -49,14 +49,24 @@
       <div class="down-content">
         <ul class="hamburger-social-list">
           <li class="social-item-menu">
-            <a href="#" class="hamburger-link">
+            <a
+              href="https://www.instagram.com/lviv.chocolate/"
+              class="hamburger-link"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
               <svg class="hamburger-icon-instagram" width="24" height="24">
                 <use href="./img/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-item-menu">
-            <a href="#" class="hamburger-link">
+            <a
+              href="https://twitter.com/Sweet_gifts_"
+              class="hamburger-link"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
               <svg class="hamburger-icon" width="24" height="24">
                 <use href="./img/sprite.svg#icon-twitter1"></use>
               </svg>
@@ -96,14 +106,24 @@
       </nav>
       <ul class="hamburger-social-list">
         <li class="social-item-menu">
-          <a href="#" class="hamburger-link">
+          <a
+            href="https://www.instagram.com/lviv.chocolate/"
+            class="hamburger-link"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+          >
             <svg class="hamburger-icon-instagram" width="24" height="24">
               <use href="./img/sprite.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="social-item-menu">
-          <a href="#" class="hamburger-link">
+          <a
+            href="https://twitter.com/Sweet_gifts_"
+            class="hamburger-link"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+          >
             <svg class="hamburger-icon" width="24" height="24">
               <use href="./img/sprite.svg#icon-twitter1"></use>
             </svg>
