--- a/src/css/how-its-made.css
+++ b/src/css/how-its-made.css
@@ -15,10 +15,21 @@
   justify-content: center;
   align-items: center;
   color: var(--pr-text-color);
+  margin-bottom: 32px;
+}
+.how-its-made-img-block {
+  position: relative;
   margin-bottom: 20px;
 }
-.how-its-made-img-block{
-  position: relative;
+.how-its-made-img-block.ready iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 500px;
+  border-radius: 15px;
+  z-index: 2;
 }
 .how-its-made-item {
   letter-spacing: -0.02em;
@@ -72,10 +83,22 @@
   border-radius: 15px;
 }
 .how-its-made-icon {
+  width: 35px;
+  height: 35px;
+  fill: #f5f4f4;
+  stroke: #f5f4f4;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.how-its-made-icon:hover,
+.how-its-made-icon:focus {
+  stroke: var(--accent-color);
+  fill: var(--accent-color);
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 375px) and (max-width: 767px) {
@@ -110,17 +133,33 @@
   .how-container {
     margin: 0 auto;
   }
-  .how-its-made-list{
+  .how-its-made-list {
     padding-right: 70px;
   }
   .try-it-interaction {
     width: 350px;
     margin-bottom: 28px;
   }
+  .how-its-made-img-block.ready iframe {
+    height: 400px;
+  }
   .how-container {
     width: 614px;
-    border-radius: 15px;
     padding: 32px;
+  }
+  .how-its-made-icon {
+    width: 44px;
+    height: 44px;
+  }
+  .how-its-made-icon:hover,
+  .how-its-made-icon:focus {
+    width: 65px;
+    height: 65px;
+  }
+  .how-its-made-img-block {
+    max-width: 614px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -134,6 +173,9 @@
   }
 }
 @media screen and (min-width: 1200px) {
+  .how-container {
+    margin: 0;
+  }
   .how-its-made {
     padding-bottom: 128px;
   }
@@ -143,9 +185,13 @@
   }
   .how-its-made-desktop {
     display: flex;
+    gap: 20px;
   }
-  .how-its-made-img {
+  /* .how-its-made-img {
     margin-right: 20px;
+  } */
+  .how-its-made-img-block {
+    margin-bottom: 0;
   }
   .try-it-interaction {
     margin: 0;
@@ -156,4 +202,3 @@
     padding-right: 27px;
   }
 }
-
