--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,10 +1,10 @@
 <section class="how-its-made" id="how-its-made">
   <div class="container">
     <h2 class="how-its-made-title">
-      HOW IT’S<span class="how-its-made-span">MADE?</span>
+      HOW IT&#8217;S<span class="how-its-made-span">MADE?</span>
     </h2>
     <div class="how-its-made-desktop">
-      <div class="how-its-made-img-block">
+      <div class="how-its-made-img-block" data-src="https://www.youtube.com/embed/Ec7LcvWPDQI?autoplay=1">
         <picture class="how-its-made-img">
           <source
             srcset="
@@ -37,13 +37,12 @@
           <img
             class="how-its-made-image"
             src="./img/how_its_made/how_its_made_mobile.jpg"
-            alt="video" 
+            alt="video"
           />
         </picture>
-        <svg class="how-its-made-icon" width="35px" height="35px">
+        <svg class="how-its-made-icon">
           <use href="./img/sprite.svg#icon-play-icon-chocolate"></use>
         </svg>
-
       </div>
       <div class="how-container">
         <h3 class="try-it-interaction">
