--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,19 +30,19 @@
       <nav class="header-nav">
         <ul class="list-header">
           <li class="nav-list">
-            <a href="#header" class="item-nav">Home</a>
+            <a href="#header" class="item-nav smooth">Home</a>
           </li>
           <li class="nav-list">
-            <a href="#how-its-made" class="item-nav">How it`s made</a>
+            <a href="#how-its-made" class="item-nav smooth">How it`s made</a>
           </li>
           <li class="nav-list">
-            <a href="#our-products" class="item-nav">Our producrs</a>
+            <a href="#our-products" class="item-nav smooth">Our producrs</a>
           </li>
           <li class="nav-list">
-            <a href="#sellers" class="item-nav">Top sellers</a>
+            <a href="#sellers" class="item-nav smooth">Top sellers</a>
           </li>
           <li class="nav-list">
-            <a href="#reviews" class="item-nav">Chocolate is loved</a>
+            <a href="#reviews" class="item-nav smooth">Chocolate is loved</a>
           </li>
         </ul>
       </nav>
@@ -88,19 +88,19 @@
       <nav class="header-nav">
         <ul class="list-header">
           <li class="nav-list">
-            <a href="#header" class="item-nav">Home</a>
+            <a href="#header" class="item-nav smooth">Home</a>
           </li>
           <li class="nav-list">
-            <a href="#how-its-made" class="item-nav">How it`s made</a>
+            <a href="#how-its-made" class="item-nav smooth">How it`s made</a>
           </li>
           <li class="nav-list">
-            <a href="#our-products" class="item-nav">Our producrs</a>
+            <a href="#our-products" class="item-nav smooth">Our producrs</a>
           </li>
           <li class="nav-list">
-            <a href="#sellers" class="item-nav">Top sellers</a>
+            <a href="#sellers" class="item-nav smooth">Top sellers</a>
           </li>
           <li class="nav-list">
-            <a href="#reviews" class="item-nav">Chocolate is loved</a>
+            <a href="#reviews" class="item-nav smooth">Chocolate is loved</a>
           </li>
         </ul>
       </nav>
