--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,22 +1,22 @@
 <section class="hero" id="hero">
-    <div class="hero-content">
-      <p class="hero-subtitle">
-        Treat yourself or a loved one to our finest ingredients for a moment of
-        pure delight!
-      </p>
-      <div class="all-button">
-        <div class="hero-buttons">
-          <button type="button" class="buy-now" data-hero-open>Buy now</button>
-          <a class="how-its" href="#how-its-made">How it`s made</a>
-        </div>
-        <div class="scroll-button">
-          <p class="last-button-text">scroll down</p>
-          <a class="scroll" href="#footer">
-            <svg class="icon-scroll" width="16" height="16">
-              <use href="./img/sprite.svg#icon-hero-scroll-down"></use>
-            </svg>
-          </a>
-        </div>
+  <div class="hero-content">
+    <p class="hero-subtitle">
+      Treat yourself or a loved one to our finest ingredients for a moment of
+      pure delight!
+    </p>
+    <div class="all-button">
+      <div class="hero-buttons">
+        <button type="button" class="buy-now" data-hero-open>Buy now</button>
+        <a class="how-its smooth" href="#how-its-made">How it`s made</a>
+      </div>
+      <div class="scroll-button">
+        <p class="last-button-text">scroll down</p>
+        <a class="scroll smooth" href="#footer">
+          <svg class="icon-scroll" width="16" height="16">
+            <use href="./img/sprite.svg#icon-hero-scroll-down"></use>
+          </svg>
+        </a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
