--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -54,19 +54,19 @@
     <div class="footer-filters">
       <ul class="footer-filters-items">
         <li class="footer-item">
-          <a href="#header" class="footer-link current">Home</a>
+          <a href="#header" class="footer-link current smooth">Home</a>
         </li>
         <li class="footer-item">
-          <a href="#how-its-made" class="footer-link">How it's made?</a>
+          <a href="#how-its-made" class="footer-link smooth">How it's made?</a>
         </li>
         <li class="footer-item">
-          <a href="#our-products" class="footer-link">Our products</a>
+          <a href="#our-products" class="footer-link smooth">Our products</a>
         </li>
         <li class="footer-item">
-          <a href="#sellers" class="footer-link">Top sellers</a>
+          <a href="#sellers" class="footer-link smooth">Top sellers</a>
         </li>
         <li class="footer-item">
-          <a href="#reviews" class="footer-link">Chocolate is loved</a>
+          <a href="#reviews" class="footer-link smooth">Chocolate is loved</a>
         </li>
       </ul>
     </div>
