--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -1,4 +1,10 @@
-<div class="buy-now__backdrop is-hidden" data-hero-modal data-sellers-modal>
+<div
+  class="buy-now__backdrop is-hidden"
+  data-hero-modal
+  data-sellers-modal
+  data-hero-close
+  data-sellers-close
+>
   <div class="container buy-now__modal-container">
     <button
       type="button"
