--- a/src/partials/explore-our-new-chocolate-first.html
+++ b/src/partials/explore-our-new-chocolate-first.html
@@ -1,6 +1,6 @@
 <!-- modal -->
 
-<div class="backdrop is-hidden" data-explore>
+<div class="backdrop is-hidden" data-explore data-explore-close>
   <div class="modal">
     <img
       class="img-style-radius"
