--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden" data-review-modal>
+<div class="backdrop is-hidden" data-review-modal data-review-close>
   <div class="modal-review">
     <button class="review-close-btn" type="button" data-review-close>
       <svg width="24" height="24">
